# playground

./: README.md  pyproject.toml
huggingface_tools/: compose.yml  conversation.py  inference.py  main.py
outlines/: test_outlines.ipynb
pdf/: pdf_test.ipynb
pdf/output/test1/: test1.md  test1_meta.json
pdf/output/test2/: test2.md  test2_meta.json
teens_ai/: plots.ipynb
vllm_openai/: client.py  tool_vllm.ipynb
