[project]
name = "playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "openai>=1.52.2",
    "outlines>=0.0.46",
    "plotly>=5.24.1",
    "scikit-learn>=1.5.2",
    "vllm>=0.6.3.post1",
]
